# distributed-discovery

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE-STATUS.md  Makefile  README.md  pyproject.toml
.agent/: PLANS.md
.github/: dependabot.yml  labels.yml  milestones.yml  pull_request_template.md
bibliography/: README.md  references.bib
claims/: claims.yml  schema.json
docs/: ai-lab-operating-boundary.md  ai-lab-operating-boundary.yml  claim-prominence-policy.md  claim-prominence.schema.json  claim-prominence.yml  claim-status-policy.md  current-roadmap.md  current-state.md  deployment.md  foundations.md  github-setup.md  glossary.md  index.md  institutional-matrix.md  notation.md  paper-claim-roles.schema.json  paper-claim-roles.yml  paper-family-map.yml  paper-lifecycle-policy.md  paper-lifecycle.schema.json  paper-lifecycle.yml  paper-recomposition-map.yml  paper-recomposition-policy.md  paper-recomposition.schema.json  phase-2-maturity.md  phase-2-maturity.schema.json  phase-2-maturity.yml  phase-2-program-directive.md  phase-2-program-directive.yml  program-v3.md  program-v5.md  project-charter.md  publication-architecture.md  publication-hierarchy.md  publication-hierarchy.yml  repository-contract.md  reproducibility.md  research-governance.md  research-roadmap.md  theorem-roadmap.md  (+1 more)
experiments/: README.md  manifest.schema.json
papers/: README.md
plans/: DD021_GENERAL_SHARING_FRONTIER.md  DD022_COORDINATION_FREE_POSITIVE_SHARING.md  DECENTRALIZED_RECOVERY_REGISTRATION.md  DISCOVERYBENCH_AGENTS_V1_EVALUATION.md  DISCOVERYBENCH_AGENTS_V1_GATE.md  DISCOVERYBENCH_AGENTS_V1_IMPLEMENTATION.md  DISCOVERYBENCH_AGENTS_V1_PROVIDER_PREFLIGHT.md  DISCOVERYBENCH_AGENTS_V1_REGISTRATION.md  FIRST_COMPENDIUM_RELEASE.md  FIRST_COMPENDIUM_RELEASE_PREPARATION.md  INFORMATION_SHARING_FRONTIER_PAPER.md  MASTER_EXEC_PLAN.md  PHASE_2_EXTERNAL_LEGIBILITY.md  PHASE_2_OPTIONALITY_AND_PAPER_LIFECYCLE.md  POST_V5_THEOREM_SPINE_CONSOLIDATION.md  PROGRAM_MEMORY_PREPRINT_INFRASTRUCTURE.md  SITE_RESULTS_LABS_RELATIONS.md  TREASUREBENCH_AGENTS_V1_PILOT.md  (+2 more)
results/: index.md
(+1804 files in other folders)
