[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "distributed-discovery"
version = "0.1.0"
description = "Private reproducibility and research infrastructure for Distributed Discovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23,<5",
  "PyYAML>=6.0,<7",
]

[project.scripts]
distributed-discovery = "distributed_discovery.cli:main"

[dependency-groups]
dev = [
  "mypy>=2.3.0,<3",
  "pytest>=8.3,<9",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0,<7",
  "types-jsonschema>=4.23,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/distributed_discovery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["distributed_discovery"]
